--- a/EC_Launcher/EC_Launcher.csproj
+++ b/EC_Launcher/EC_Launcher.csproj
@@ -62,7 +62,7 @@
     <ManifestKeyFile>EC_Launcher_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
