--- a/EC_Launcher/EC_Launcher.csproj
+++ b/EC_Launcher/EC_Launcher.csproj
@@ -252,5 +252,14 @@
   <ItemGroup>
     <Resource Include="Icons\moddb-black.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\webmoney_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\bitcoin_logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\qiwi_logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
