added donate payment forms and report bug options

--- a/EC_Launcher/EC_Launcher.csproj
+++ b/EC_Launcher/EC_Launcher.csproj
@@ -261,5 +261,8 @@
   <ItemGroup>
     <Resource Include="Icons\qiwi_logo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\yamoney_logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
