--- a/EC_Launcher/packages.config
+++ b/EC_Launcher/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="net46" />
   <package id="Dropbox.Api" version="4.9.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
+  <package id="Prism.Core" version="7.1.0.431" targetFramework="net46" />
+  <package id="Prism.Unity" version="7.1.0.431" targetFramework="net46" />
+  <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net46" />
+  <package id="Unity.Abstractions" version="3.3.1" targetFramework="net46" />
+  <package id="Unity.Container" version="5.8.13" targetFramework="net46" />
 </packages>
